<resources>
    <string name="app_name">NUMAD20Su-YiwenFang</string>
    <string name="about_string">About</string>
    <string name="nameEmail_string" />
    <string name="education_string">Education</string>
    <string name="resumeTextView_string" />
    <string name="grid3x2_string">Grid 3 x 2</string>
    <string name="a_string">A</string>
    <string name="b_string">B</string>
    <string name="c_string">C</string>
    <string name="d_string">D</string>
    <string name="e_string">E</string>
    <string name="f_string">F</string>
    <string name="link_collector_string">Link Collector</string>
    <string name="title_activity_link_collector">LinkCollectorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_string">Enter</string>
    <string name="link_name_string">Name</string>
    <string name="link_url_string">URL</string>
    <string name="locator_string">Locator</string>
    <string name="latitude_string">Latitude:&#160;</string>
    <string name="longitude_string">Longitude:&#160;</string>
    <string name="display_location_string">Try Again!</string>
    <string name="latitude_n_a_string">N / A</string>
    <string name="longitude_n_a_string">N / A</string>
    <string name="at_your_service_string">At Your Service</string>
    <string name="textView9_string">Retrieve location info from a US post code</string>
    <string name="editText3_hint">US Post Code</string>
    <string name="button14_string">Send</string>
    <string name="textView10_string">Web Service Connection Status: Disconnected</string>
    <string name="test_api_string">Test API</string>
    <string name="textview13_string">Hint: Click \"Test API\" to test a predefined post code \"90210\" in the API. You should see the full retrieved info if the API service is OK.</string>
</resources>
